--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-"Check my resume at <a>https://registry.jsonresume.org/r-trigo</a>" 
+<h1><a href=https://registry.jsonresume.org/r-trigo>Check my JSON resume</a></h1>
