--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1><a href=https://registry.jsonresume.org/r-trigo>Check my JSON resume</a></h1>
+<h1><a href=https://registry.jsonresume.org/r-trigo>Check out my JSON resume</a></h1>
