--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<h1><a href=https://registry.jsonresume.org/r-trigo>Check out my JSON resume</a></h1>
+---
+title: rtrigo.me
+redirect_to: http://rtrigo.me/rt-jekyll-site
+---
