--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
-title: rtrigo.me
-redirect_to: https://rtrigo.me/rt-jekyll-site
+title: rtrigo.tech
+redirect_to: https://rtrigo.tech/rt-jekyll-site
 ---
