--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
-title: rtrigo.tech
-redirect_to: https://rtrigo.tech/rt-jekyll-site
+title: rtrigo.ninja
+redirect_to: https://rtrigo.ninja/rt-jekyll-site
 ---
