fix(redirect): redirect to gh pages blog repo

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
-title: rtrigo.ninja
-redirect_to: https://rtrigo.ninja/rt-jekyll-site
+title: r-trigo.github.io
+redirect_to: https://r-trigo.github.io/jekyll-blog/
 ---
